--- a/module-04/css/style.css
+++ b/module-04/css/style.css
@@ -171,6 +171,7 @@ header, main {
 }
 
 .news-item__button{
+    cursor: pointer;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     font-size: 16px;
