--- a/module-06/css/styles.css
+++ b/module-06/css/styles.css
@@ -3,12 +3,34 @@
     padding: 0;
 }
 
-.header{
+
+/* Global stylesheets */
+.header,
+.main,
+.footer{
     width: 1200px;
+    margin: 0 auto;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+}
+
+.df-jcsb{
+    display: flex;
+    justify-content: space-between;
+}
+
+.lsn{
+    list-style: none
+}
+
+/* --- HEADER --- */
+.header{
+    align-items: flex-end; 
+    padding-top: 28px;
+    padding-bottom: 14px;
     margin: 0 auto;
 }
 
-/* Оформление Header */
 .logo{
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
@@ -16,20 +38,8 @@
     color: #95e1d3;
 }
 
-.header{
-    padding-top: 28px;
-    padding-bottom: 14px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end; 
-}
-
 .menu{
-    list-style: none;
     width: 490px;
-    display: flex;
-    justify-content: space-between;
 }
 
 .menu-link{
@@ -45,4 +55,95 @@
     color: #f38181;
     transition-property: 
     transition-duration: 2s;
+}
+
+/* --- MAIN --- */
+.services,
+.team{
+    margin: 85px auto;
+}
+
+.services_pre-head{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+    text-align: center;
+}
+
+.services_head{
+    font-size: 30px;
+    text-align: center;
+}
+
+.services_head::after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    margin: 40px auto;
+}
+.services-list{
+    flex-wrap: wrap;
+    margin: 40px auto;
+}
+
+.services-list__item{
+    width: 350px;
+    margin: 20px 0;
+}
+
+.services-list__title{
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.services-list__title{
+    text-transform: uppercase;
+    font-weight: normal;
+}
+
+.services-list__paragraph{
+    width: 270px;
+    margin: 20px 0;
+    font-size: 15px;
+}
+
+/* --- FOOTER --- */
+.footer{
+    align-items: center;
+    padding: 10px 0;
+    border-top: 1px solid #d9d9d9;
+}
+
+.footer__copyright{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 14;
+}
+
+.footer_tmplt-author{
+    text-decoration: none;
+    color: #f38181;
+}
+
+.footer__form{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.footer__input-email{
+    width: 230px;
+    height: 40px;
+    border: 1px solid #d9d9d9;
+    border-right: none;
+    box-sizing: border-box;
+    color: #d9d9d9;
+}
+.footer__button{
+    width: 150px;
+    height: 40px;
+    border: none;
+    background-color: #95e1d3;
+    text-transform: uppercase;
+    font-weight: 700;
+    color: #fff;
 }
