--- a/module-07/module-07-task-01/css/styles.css
+++ b/module-07/module-07-task-01/css/styles.css
@@ -1,4 +1,35 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
+}
+
+table {
+    border-collapse: collapse;
+    margin: auto;
+}
+
+caption {
+    font-size: 1.5rem;
+    padding: 20px;
+}
+
+td,
+th {
+    padding: 15px;
+    border: 2px solid #444;
+}
+
+th {
+    background-color: #444;
+    color: #fff;
+
+}
+
+.col1 {
+    text-transform: uppercase;
+}
+.col2,
+.col3 {
+    text-align: center;
 }
