--- a/module-07/css/styles.css
+++ b/module-07/css/styles.css
@@ -1,4 +1,88 @@
+/* montserrat-700 - latin */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Montserrat Bold'), local('Montserrat-Bold'),
+         url('../fonts/montserrat-v12-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/montserrat-v12-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* roboto-slab-regular - latin */
+@font-face {
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Roboto Slab Regular'), local('RobotoSlab-Regular'),
+         url('../fonts/roboto-slab-v7-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/roboto-slab-v7-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* roboto-slab-regular - latin */
+@font-face {
+    font-family: 'Droid Serif';
+    font-style: italic;
+    font-weight: 400;
+    src: local('Droin Serif Italic'), local('DroidSerif-Italic'),
+         url('../fonts/droidserifitalic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
+         url('../fonts/droidserifitalic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+
 *{
     margin: 0;
     padding: 0;
+}
+
+
+a {
+    text-decoration: none;
+}
+
+
+.lsn {
+    list-style: none
+}
+.df_jcsb {
+    display: flex;
+    justify-content: space-between;
+}
+
+
+.header,
+.services,
+.contact {
+    width: 940px;
+    margin: auto;
+}
+
+.header{
+    padding-top: 44px;
+    align-items: center;
+}
+
+.nav_list{
+    width: 480px;
+}
+.nav_list--item a{
+    text-transform: uppercase;
+    font-family: 'Montserrat';
+    font-size: 14px;
+    color: #222222;
+}
+.nav_list--item:hover a{
+    color: #fed136;
+}
+
+.services,
+.contact {
+    text-align: center;
+}
+.services_list--item {
+    width: 275px;
+}
+
+
+.wrapper_gray {
+    background-color: #222222;
 }
