--- a/module-07/css/styles.css
+++ b/module-07/css/styles.css
@@ -136,7 +136,17 @@ a {
 /* ---------- .wrapper_gray STYLESHEETS ---------- */
 .wrapper_gray {
     background-color: #222222;
-    padding-top: 110px;
+    background-image: url(../img/Map\ Image@1X.png);
+    padding: 110px 0;
+}
+
+.wrapper_gray--bgi {
+    background-image: url(../img/Map\ Image@1X.png);
+    background-repeat: no-repeat;
+    position: relative;
+    top: 90px;
+    right: 0;
+
 }
 
 .contact--tittle {
@@ -146,7 +156,10 @@ a {
 .contact_form--left_block {
     width: 940px;
     height: 210px;
+    align-content: space-between;
     flex-direction: column;
+    flex-wrap: wrap;
+    margin-top: 75px;
 }
 
 .contact_form--name:valid,
@@ -162,5 +175,19 @@ a {
     border: none;
     border-radius: 3px;
     width: 419px;
+}
+textarea.form_item-global_style {
+    height: 210px;
+}
+.contact_form--submit{
+    cursor: pointer;
+    margin-top: 55px;
+    font-family: 'Montserrat';
+    font-size: 18px;
+    background-color: #fed136;
+    color: #fff;
+    padding: 25px 45px;
+    border: none;
+    border-radius: 4px;
 }
 /* ---------- .wrapper_gray STYLESHEETS END---------- */
