--- a/JS/CW/class_work-20190131/css/main.css
+++ b/JS/CW/class_work-20190131/css/main.css
@@ -20,8 +20,8 @@ body{
     width: 100%;
 }
 div.wrapper{
-    width: calc(4*225px);
-    margin: 0 auto;
+    width: 100%;
+    max-width: calc(4*200px);
 }
 hgroup{padding-left: 7px;}
 span, a, strong{font-weight: 700;}
@@ -45,7 +45,8 @@ section h1, section p.meta{
 }
 section hgroup{margin-top: -360px;}
 section p.numbers{font-size: 6em;}
-section p.meta,section p.strings{font-size: 1.5em; padding-left: 5px;}
+section p.meta,section p.strings{font-size: 1.5em;}
+section p.meta{padding-left: 5px;}
 section h1{font-size: 4.5em;} */
 /* countdown styles */
 div#countdown{color: #353535;}
@@ -69,13 +70,13 @@ p.strings{
     color: #FFFFFF;
 }
 div.cd-box{
-    width: 20%;
+    width: 23%;
     max-width: 210px;
     height: 360px;
     background: #FFFFFF;
     float: left;
     padding: 25px 0 0 0;
-    margin: 30px 7px 0;
+    margin: 30px 1% 0;
     -webkit-box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
     -moz-box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
     box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
@@ -90,4 +91,6 @@ footer{
     position: absolute;
     bottom: 0;
     font-size: 12px;
+    background-color: #FF5722;
+    color: #fff;
 }
