--- a/JS/CW/class_work-20190131/css/main.css
+++ b/JS/CW/class_work-20190131/css/main.css
@@ -21,7 +21,7 @@ body{
 }
 div.wrapper{
     width: 100%;
-    max-width: calc(4*200px);
+    max-width: 800px;
 }
 hgroup{padding-left: 7px;}
 span, a, strong{font-weight: 700;}
@@ -44,8 +44,8 @@ section h1, section p.meta{
     margin-bottom: 15px;
 }
 section hgroup{margin-top: -360px;}
-section p.numbers{font-size: 4em;}
-section p.meta,section p.strings{font-size: 1.5em;}
+section p.numbers{font-size: 5em;}
+section p.meta,section p.strings{font-size: 1.4em;}
 section p.meta{padding-left: 5px;}
 section h1{font-size: 4.5em;} */
 /* countdown styles */
@@ -56,11 +56,11 @@ div#countdown p{
     text-align: center;
 }
 p.numbers{
-    width: 100%;
-    height: 85%;
+    /* width: 100%; */
+    /* height: 85%; */
     background: #FFFFFF;
-    margin-top: -25px;
-    padding-top: 100px;
+    /* margin-top: -25px; */
+    /* padding-top: 100px; */
 }
 p.strings{
     width: 100%;
@@ -72,11 +72,12 @@ p.strings{
 div.cd-box{
     width: 23%;
     max-width: 210px;
-    height: 360px;
+    height: 21vw;
+    max-height: 360px;
     background: #FFFFFF;
     float: left;
     padding: 25px 0 0 0;
-    margin: 30px 1% 0;
+    margin: 105px 1% 0;
     -webkit-box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
     -moz-box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
     box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
