--- a/JS/CW/class_work-20190131/css/main.css
+++ b/JS/CW/class_work-20190131/css/main.css
@@ -77,7 +77,7 @@ div.cd-box{
     background: #FFFFFF;
     float: left;
     padding: 25px 0 0 0;
-    margin: 105px 1% 0;
+    margin: 13% 1% 0;
     -webkit-box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
     -moz-box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
     box-shadow: 0px 13px 15px 0px rgba(53, 53, 53, 0.5);
