--- a/JS/CW/class_work-20190206/css/main.css
+++ b/JS/CW/class_work-20190206/css/main.css
@@ -31,9 +31,9 @@ li {
 
 }
 li:hover {
-    /* position: absolute; */
+    position: relative;
     transform: scale(1.1, 1.1);
-    z-index: 100;
+    z-index: 1;
     transition: all .2s;
     cursor: pointer;
     -webkit-box-shadow: 0px 0px 40px 5px rgba(0,0,0,0.75);
@@ -53,4 +53,10 @@ img:hover {
 .trackName {
     padding-left: 20px;
     width: 200px;
+}
+
+iframe {
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
