--- a/JS/CW/class_work-20190206/css/main.css
+++ b/JS/CW/class_work-20190206/css/main.css
@@ -56,7 +56,12 @@ img:hover {
 }
 
 iframe {
+    visibility: hidden;
     position: fixed;
     bottom: 0;
     left: 0;
+}
+
+.unhide {
+    visibility: visible;
 }
