--- a/JS/Modules/module-08/css/main.css
+++ b/JS/Modules/module-08/css/main.css
@@ -1,89 +1,30 @@
-html {
-    box-sizing: border-box;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-  }
-  
-  img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-  }
-  
-  #root {
-    display: flex;
-  }
-
-  .movie {
-    width: 400px;
-    border-radius: 4px;
-    color: #212121;
-    margin: 0 auto;
-    box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
-  }
-  
-  .movie__image {
-    margin-bottom: 8px;
-    height: 550px;
-    width: 100%;
-    object-fit: cover;
-  }
-  
-  .movie__body {
-    padding: 8px;
-  }
-  
-  .movie__title {
-    margin: 0;
-    margin-bottom: 16px;
-    font-size: 32px;
-    font-weight: 500;
-  }
-  
-  .movie__description {
-    margin: 0;
-    margin-bottom: 16px;
-    line-height: 1.5;
-  }
-  
-  .button {
-    position: relative;
-    display: inline-block;
-    border: none;
-    border-radius: 3px;
-    padding: 0 1.5em;
-    vertical-align: top;
-  
-    font-size: 15px;
-    line-height: 2.8;
-    color: #222;
-    text-transform: uppercase;
-    text-align: center;
-    white-space: nowrap;
-    font-family: inherit;
-    font-weight: 500;
-    text-decoration: none;
-  
-    background-color: #fff;
-    overflow: hidden;
-    z-index: 0;
-    cursor: pointer;
-  
-    box-shadow: 0 2px 1px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3);
-    transition: background-color 0.3s, box-shadow 0.3s, opacity 0.3s, color 0.3s;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  }
-  
-  .button:hover {
-    box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 4px 8px rgba(0, 0, 0, 0.3);
-  }
-  
+*{margin: 0;padding: 0;list-style: none;}
+.image-gallery {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  margin-top: 10px;
+  width: calc(180px*5 + 20px*5);
+  /* outline: 1px solid blue; */
+}
+.fullview {
+  box-shadow: 0 0 7px 0px #777;
+  border: 10px solid #ffffff;
+}
+.fullview img {
+  width: 980px;
+}
+.preview {
+  display: flex;
+  flex-wrap: wrap;
+  box-shadow: 0 0 7px 0px #777;
+  margin-top: 10px;
+}
+.preview li {
+  /* width: 180px; */
+  border: 10px solid #ffffff;
+}
+.preview img {
+  width: 180px;
+}
