--- a/JS/Modules/module-08/css/main.css
+++ b/JS/Modules/module-08/css/main.css
@@ -1,4 +1,4 @@
-*{margin: 0;padding: 0;list-style: none;}
+*{margin: 0;padding: 0;list-style: none;font-size: 0;}
 .image-gallery {
   position: absolute;
   left: 50%;
@@ -29,3 +29,13 @@
   width: 120px;
   cursor: pointer;
 }
+.selected {
+  outline: 5px solid #64df60;
+  transition: all .5s;
+}
+/* .selector {
+  position: absolute;
+  width: 130px;
+  height: 90px;
+  background-color: rgb(2, 238, 73);
+} */
