--- a/JS/Modules/module-09/css/main.css
+++ b/JS/Modules/module-09/css/main.css
@@ -1,34 +1,44 @@
-*{margin: 0;padding: 0;list-style: none;font-size: 0;}
-.image-gallery {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  -webkit-transform: translateX(-50%);
-  margin: 25px;
-  width: calc(120px*5 + 10px*5);
-  /* outline: 1px solid blue; */
-}
-.fullview {
-  box-shadow: 0 0 7px 0px #777;
-  border: 5px solid #ffffff;
-}
-.fullview img {
-  width: 640px;
-}
-.preview {
-  display: flex;
-  flex-wrap: wrap;
-  box-shadow: 0 0 7px 0px #777;
-  margin-top: 10px;
-}
-.preview li {
-  border: 5px solid #ffffff;
-}
-.preview img {
-  width: 120px;
-  cursor: pointer;
-}
-.selected {
-  outline: 5px solid #64df60;
-  transition: all .5s;
-}
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .stopwatch {
+    padding: 30px;
+    text-align: center;
+    box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+    color: #212121;
+    border-radius: 2px;
+  }
+  
+  .time {
+    margin-bottom: 15px;
+    font-family: "Roboto Mono", monospace;
+    font-size: 80px;
+  }
+  
+  .btn {
+    display: inline;
+    text-transform: uppercase;
+    border: 0;
+    background-color: #212121;
+    color: #ffffff;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 28px;
+    border-radius: 2px;
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .active {
+    background-color: #2196F3;
+  }
+  
