--- a/JS/Modules/module-10/Tasks/03/css/main.css
+++ b/JS/Modules/module-10/Tasks/03/css/main.css
@@ -5,8 +5,6 @@ body {
 
 .container {
   padding-top: 20px;
-  width: 400px;
-  min-width: 480px;
   margin: auto;
 }
 
@@ -23,20 +21,20 @@ body {
   font-weight: 600;
   background-color: #00796b;
   cursor: pointer;
-  box-shadow: 0 4px 4px 0 rgba(#414141, 0.3);
+  box-shadow: 0 4px 4px 0 rgba(65, 65, 65, 0.3);
 }
 .mdc-btn:hover {
   background-color: #004c40;
 }
 .mdc-btn:active {
-  box-shadow: 0 6px 4px 0 rgba(#414141, 0.3);
+  box-shadow: 0 6px 4px 0 rgba(65, 65, 65, 0.3);
 }
 
 .search-form {
   display: flex;
   justify-content: center;
   padding: 20px;
-  box-shadow: 0 0 2px 2px rgba(#414141, 0.2);
+  box-shadow: 0 0 2px 2px rgba(65, 65, 65, 0.2);
 }
 
 .search-form input {
@@ -51,4 +49,29 @@ body {
 }
 .search-form input::placeholder {
   color: #616161;
+}
+
+
+.users-table {
+  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 90%;
+  max-width: 900px;
+  margin: auto;
+}
+
+.users-table td, .users-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.users-table tr:nth-child(even){background-color: #f2f2f2;}
+
+.users-table tr:hover {background-color: #ddd;}
+.users-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
 }
