--- a/JS/Modules/module-10/css/main.css
+++ b/JS/Modules/module-10/css/main.css
@@ -1,83 +1,93 @@
 body {
-    font-family: "Roboto", sans-serif;
-    background: #fff;
-  }
-  
-  .container {
-    padding-top: 20px;
-    margin: auto;
-  }
-  
-  .mdc-btn {
-    min-width: 88px;
-    height: 36px;
-    padding: 0 16px;
-    border: 0;
-    outline: 0;
-    border-radius: 2px;
-    color: #fff;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 600;
-    background-color: #00796b;
-    cursor: pointer;
-    box-shadow: 0 4px 4px 0 rgba(65, 65, 65, 0.3);
-  }
-  .mdc-btn:hover {
-    background-color: #004c40;
-  }
-  .mdc-btn:active {
-    box-shadow: 0 6px 4px 0 rgba(65, 65, 65, 0.3);
-  }
-  .mdc-btn:first-of-type {
-    margin-right: 12px;
-  }
-  
-  .search-form {
-    display: flex;
-    justify-content: center;
-    padding: 20px;
-    box-shadow: 0 0 2px 2px rgba(65, 65, 65, 0.2);
-  }
-  
-  .search-form input {
-    margin-right: 12px;
-    padding: 4px;
-    outline: 0;
-    border: 0;
-    color: #263238;
-    font-size: 18px;
-    background-color: transparent;
-    border-bottom: 2px solid #00796b;
-  }
-  .search-form input::placeholder {
-    color: #616161;
-  }
-  .search-form input:focus::placeholder {
-    color: transparent;
-  }
-  
-  
-  .users-table {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 90%;
-    max-width: 900px;
-    margin: auto;
-  }
-  
-  .users-table td, .users-table th {
-    border: 1px solid #ddd;
-    padding: 8px;
-  }
-  
-  .users-table tr:nth-child(even){background-color: #f2f2f2;}
-  
-  .users-table tr:hover {background-color: #ddd;}
-  .users-table th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: left;
-    background-color: #4CAF50;
-    color: white;
-  }
+	font-family: "Roboto", sans-serif;
+	background: #fff;
+}
+
+.container {
+	padding: 20px;
+	margin: auto;
+}
+
+.mdc-btn {
+	min-width: 88px;
+	height: 36px;
+	padding: 0 16px;
+	margin: 8px;
+	border: 0;
+	outline: 0;
+	border-radius: 2px;
+	color: #fff;
+	font-size: 14px;
+	text-transform: uppercase;
+	font-weight: 600;
+	background-color: #00796b;
+	cursor: pointer;
+	box-shadow: 0 4px 4px 0 rgba(65, 65, 65, 0.3);
+}
+.mdc-btn:hover {
+	background-color: #004c40;
+}
+.mdc-btn:active {
+	box-shadow: 0 6px 4px 0 rgba(65, 65, 65, 0.3);
+}
+.mdc-btn:first-of-type {
+	/* margin-right: 12px; */
+}
+
+.search-form {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	padding: 20px;
+	box-shadow: 0 0 2px 2px rgba(65, 65, 65, 0.2);
+}
+
+.search-form input {
+	margin: 8px;
+	padding: 4px;
+	outline: 0;
+	border: 0;
+	color: #263238;
+	font-size: 18px;
+	background-color: transparent;
+	border-bottom: 2px solid #00796b;
+}
+.search-form input::placeholder {
+	color: #616161;
+}
+.search-form input:focus::placeholder {
+	color: transparent;
+}
+
+.users-table {
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 90%;
+	max-width: 900px;
+	margin: 20px;
+	margin: auto;
+}
+
+.users-table td,
+.users-table th {
+	border: 1px solid #ddd;
+	padding: 8px;
+}
+
+.users-table tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
+
+.users-table tr:hover {
+	background-color: #ddd;
+}
+.users-table th {
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: left;
+	background-color: #4caf50;
+	color: white;
+}
+.hidden {
+	
+}
