--- a/ReAct/CW/class_work-20190305/state/src/index.css
+++ b/ReAct/CW/class_work-20190305/state/src/index.css
@@ -12,3 +12,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+#root {
+  background-color: #eeeeee;
+  height: 100vh;
+  padding: 1rem;
+  
+}
