ToDo Ready (without Props)

--- a/ReAct/CW/class_work-20190306/todo/src/ToDoListItem/ToDoListItem.css
+++ b/ReAct/CW/class_work-20190306/todo/src/ToDoListItem/ToDoListItem.css
@@ -6,6 +6,9 @@
     display: flex;
     justify-content: space-between;
 }
+.crossed {
+    text-decoration: line-through;
+}
 button {
     margin: .25rem;
 }
