--- a/ReAct/CW/class_work-20190318_redux/redux/src/App.css
+++ b/ReAct/CW/class_work-20190318_redux/redux/src/App.css
@@ -2,6 +2,7 @@
 .container {
   padding: 2rem;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
@@ -9,12 +10,18 @@
 }
 .text {
   text-align: center;
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: 700;
-  flex-grow: 1;
+  /* flex-basis: 100%; */
+}
+.buttonConteiner {
+  display: flex;
+  justify-content: space-between;
 }
 button {
   padding: 1rem;
-  margin-right: 1rem;
   font-size: 2rem;
+}
+form {
+  /* flex-basis: 100%; */
 }
