--- a/ReAct/CW/class_work-20190318_redux/redux/src/Form/Form.css
+++ b/ReAct/CW/class_work-20190318_redux/redux/src/Form/Form.css
@@ -1,3 +1,10 @@
 .form {
     margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form input {
+    margin-bottom: 2rem;
+    font-size: 2rem;
 }
