--- a/JS/Modules/module-10/css/main.css
+++ b/JS/Modules/module-10/css/main.css
@@ -6,6 +6,9 @@ body {
 .container {
 	padding: 20px;
 	margin: auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .mdc-btn {
@@ -23,6 +26,7 @@ body {
 	background-color: #00796b;
 	cursor: pointer;
 	box-shadow: 0 4px 4px 0 rgba(65, 65, 65, 0.3);
+	transition-duration: 1s;
 }
 .mdc-btn:hover {
 	background-color: #004c40;
@@ -36,8 +40,8 @@ body {
 
 .search-form {
 	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
+	flex-direction: column;
+	align-items: center;
 	padding: 20px;
 	box-shadow: 0 0 2px 2px rgba(65, 65, 65, 0.2);
 }
@@ -65,7 +69,6 @@ body {
 	width: 90%;
 	max-width: 900px;
 	margin: 20px;
-	margin: auto;
 }
 
 .users-table td,
