Done: LS, add card, del card

--- a/ReAct/FDE/exercise03_contact-book_react-redux/contact-book/src/App.css
+++ b/ReAct/FDE/exercise03_contact-book_react-redux/contact-book/src/App.css
@@ -1,8 +1,12 @@
 .App {
   height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.CCConteiner {
+  display: flex;
 }
 .modal {
   width: 100vw;
